# remote-ssh

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
scripts/: install-skill.sh
skill/: SKILL.md
src/remote_ssh_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  selectors.py  ssh.py  utils.py
tests/: test_storage_mount.py
