[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remote-ssh"
version = "0.1.0"
description = "CLI tool for managing remote GPU debug jobs and SSH connections on SZU AI Cloud"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["ssh", "gpu", "cloud", "szu-aicloud", "remote", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "playwright>=1.40",
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "types-requests",
]

[project.scripts]
remote-ssh = "remote_ssh_cli.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/remote-ssh"
Repository = "https://github.com/yourusername/remote-ssh"
Issues = "https://github.com/yourusername/remote-ssh/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/remote_ssh_cli"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM", "TID",
]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
